--- a/.gitignore
+++ b/.gitignore
@@ -731,3 +731,4 @@ obj/
 !/gradle/wrapper/gradle-wrapper.jar
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij+all,androidstudio,android,xcode,git,java,kotlin,nextjs,reactnative,react,windows,macos,linux,firebase,cocoapods,swift,swiftpackagemanager
+/.kotlin/sessions/
