--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,5 @@ org.gradle.caching=true
 #Android
 android.nonTransitiveRClass=true
 android.useAndroidX=true
+#Compose
+compose.desktop.packaging.checkJdkVendor=false
