feat: Implement deep linking for password reset
This commit introduces deep linking (Android) and universal links (iOS) to handle password reset functionality initiated from an external source, like an email.

- **Multiplatform Navigation:**
    - A `StaticNavigator` object has been created in `commonMain` to hold a static reference to the `NavHostController`. This allows deep link handlers outside the Composable hierarchy to trigger navigation.
    - The navigator caches incoming link data if received before the UI is fully initialized.
    - Updated `NavHost` in `App.kt` to include multiple `navDeepLink` definitions for the `ResetPasswordRoute` to support `http`, `https`, and different host variations.

- **Android Implementation:**
    - Updated `AndroidManifest.xml` to correctly configure the `<intent-filter>` for handling `http://apptolast.com` and `https://apptolast.com` URLs.
    - Implemented `onNewIntent` in `MainActivity.kt` to receive and process the deep link intent, extracting the reset token.

- **iOS Implementation:**
    - Added an `AppDelegate.swift` to handle incoming universal links (`NSUserActivityTypeBrowsingWeb`). It parses the URL to extract the reset token.
    - Created `AppLinkHandler.kt` in the `iosMain` source set to bridge the token from Swift to the shared Kotlin code, triggering navigation.
    - Added `iosApp.entitlements` with the `com.apple.developer.associated-domains` key to associate `applinks:apptolast.com`.
    - Updated `Info.plist` to define a URL scheme.
    - Adjusted `ContentView.swift` to better handle the safe area and keyboard.

--- a/composeApp/src/androidMain/AndroidManifest.xml
+++ b/composeApp/src/androidMain/AndroidManifest.xml
@@ -21,7 +21,7 @@
             </intent-filter>
 
             <!-- Deep Link for Reset Password (HTTP) -->
-            <intent-filter android:autoVerify="true">
+            <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
@@ -29,10 +29,12 @@
 
                 <data
                     android:host="apptolast.com"
+                    android:path="/"
                     android:scheme="http" />
 
                 <data
                     android:host="apptolast.com"
+                    android:path="/"
                     android:scheme="https" />
             </intent-filter>
 
