GH-39 Setup recovery password (#20)
* feat: Implement forgot password functionality

This commit introduces a complete "Forgot Password" feature, allowing users to request a password reset email.

- **API & Data Layer:**
    - Added `ForgotPasswordRequest` to `AuthModels.kt` to represent the request body.
    - Implemented `forgotPassword` suspend function in `AuthApiService.kt` to call the new `POST /api/auth/forgot-password` endpoint.
    - Added the corresponding `forgotPassword` function to the `AuthRepository` interface and its implementation in `AuthRepositoryImpl.kt`.

- **ViewModel Logic:**
    - Updated `AuthViewModel` to manage the forgot password flow.
    - Added `forgotPasswordEmail` to the `AuthState` and a `forgotPassword` function to handle business logic, including email validation and loading state management.
    - Introduced a `ForgotPasswordSuccess` event to `AuthEvent` for navigation and UI feedback.
    - Added `clearForgotPasswordForm` to reset the state.

- **UI & Navigation:**
    - Created a new `ForgotPasswordScreen.kt` with a dedicated UI for users to enter their email and request a reset link.
    - Added `ForgotPasswordRoute` to `Routes.kt` for type-safe navigation.
    - Integrated the new screen into the navigation graph in `App.kt`.
    - Enabled the "Forgot password?" `TextButton` on the `LoginScreen.kt` to navigate to the new `ForgotPasswordRoute`.

* refactor: Decompose screens into stateless components and add previews

This commit refactors several screens to improve composability, testability, and development workflow by separating stateful and stateless components and adding `@Preview` annotations.

- **Stateful/Stateless Component Separation:**
  - Decomposed `LoginScreen`, `RegisterScreen`, `ForgotPasswordScreen`, `HomeScreen`, and `SensorDetailScreen` into two parts:
    - A stateful composable that observes the `ViewModel`'s state and handles events.
    - A private, stateless "Content" composable (`LoginScreenContent`, `

--- a/iosApp/iosApp/Info.plist
+++ b/iosApp/iosApp/Info.plist
@@ -4,5 +4,16 @@
 <dict>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.apptolast.greenhousefronts</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>apptolast</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
